--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -155,7 +155,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Volver"
-            android:backgroundTint="@color/azul"
+            android:backgroundTint="@color/naranja"
             android:textColor="@color/white"
             />
     </LinearLayout>
