--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="verde">#298E39</color>
     <color name="verdeclaro">#37BD4D</color>
     <color name="verde_tenue">#E9FBE0</color>
-    <color name="azul">#2A4B8E</color>
+    <color name="naranja">#E7932C</color>
     <color name="rojo_claro">#EE4949 </color>
     <color name="amarillo_palido">#F3BC34 </color>
     <color name="green_menus">#9CEC32</color>
