--- a/app/src/main/res/layout/editar_cultivo.xml
+++ b/app/src/main/res/layout/editar_cultivo.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/arrow2"
+            android:id="@+id/arrow_editar"
             android:layout_width="27dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -31,20 +31,12 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="3"
-            android:gravity="center_vertical"
-            android:text="   Verduritas SA"
+            android:gravity="center"
+            android:text="Verduritas SA"
             android:textSize="35sp" />
 
         <ImageButton
-            android:id="@+id/perfil"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/green_menus"
-            app:srcCompat="@drawable/baseline_person_24" />
-
-        <ImageButton
-            android:id="@+id/desconectar"
+            android:id="@+id/desconectar_editar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -123,6 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:backgroundTint="@color/verdeclaro"
+            android:background="@drawable/edit_text_rounded"
             android:text="Guardar cambios" />
 
     </LinearLayout>
