--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -14,9 +14,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bienvenida"
+        android:textSize="25sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="5dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -93,23 +94,37 @@
                 android:layout_marginBottom="15dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/verdeclaro"
+                android:background="@drawable/edit_text_rounded"
                 android:text="Iniciar Sesion"
                 android:textColor="@color/black"
-                    android:textSize="20sp" />
+                android:textSize="20sp"/>
 
             <Button
-                android:id="@+id/registrar"
+                android:id="@+id/inicio_google"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
                 android:layout_weight="1"
-                android:text="Registrate"
-                android:textColor="@color/black"
-                android:textSize="20sp"
+                android:background="@drawable/state_animation"
                 android:backgroundTint="@color/white"
+                android:backgroundTintMode="add"
                 android:drawableLeft="@drawable/googleg_standard_color_18"
                 android:drawablePadding="8dp"
-                android:paddingLeft="16dp"
-                />
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:text="@string/ingresa_con_google"
+                android:textColor="@color/black"
+                android:enabled="true"
+                android:textSize="20sp" />
+
+
+            <TextView
+                android:id="@+id/registrate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/registrate"
+                android:layout_weight="1"
+                android:textAlignment="center"/>
 
         </LinearLayout>
 
