--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -5,6 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/verde_tenue"
     tools:context=".Perfil">
 
     <LinearLayout
@@ -34,6 +35,8 @@
             android:clickable="false"
             android:ems="10"
             android:focusable="false"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
             android:textSize="25sp" />
 
         <TextView
@@ -51,6 +54,8 @@
             android:clickable="false"
             android:ems="10"
             android:focusable="false"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
             android:textSize="25sp" />
 
         <TextView
@@ -68,6 +73,8 @@
             android:ems="10"
             android:clickable="false"
             android:focusable="false"
+            android:paddingEnd="10dp"
+            android:paddingStart="10dp"
             android:textSize="25sp" />
 
 
@@ -83,7 +90,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:id="@+id/arrow"
+            android:id="@+id/arrow_perfil"
             android:layout_width="27dp"
             android:layout_height="wrap_content"
             android:layout_weight="3"
@@ -96,20 +103,12 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_vertical"
             android:layout_weight="3"
-            android:gravity="center_vertical"
-            android:text="   Verduritas SA"
-            android:textSize="35sp" />
+            android:gravity="center"
+            android:text="Verduritas SA"
+            android:textSize="30sp" />
 
         <ImageButton
-            android:id="@+id/perfil"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/green_menus"
-            app:srcCompat="@drawable/baseline_person_24" />
-
-        <ImageButton
-            android:id="@+id/desconectar"
+            android:id="@+id/desconectar_perfil"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -117,4 +116,16 @@
             app:srcCompat="@drawable/baseline_logout_24" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Perfil"
+        android:textSize="35dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout2"
+        app:layout_constraintVertical_bias="0.729" />
 </androidx.constraintlayout.widget.ConstraintLayout>
