--- a/app/src/main/res/layout/nuevo_cultivo.xml
+++ b/app/src/main/res/layout/nuevo_cultivo.xml
@@ -32,6 +32,7 @@
             android:layout_weight="3"
             android:gravity="center"
             android:text="Verduritas SA"
+            android:textColor="@color/black"
             android:textSize="35sp" />
 
         <ImageButton
@@ -63,6 +64,7 @@
             android:layout_height="wrap_content"
             android:text="Alias"
             android:textSize="25sp"
+            android:textColor="@color/black"
             android:layout_marginBottom="15dp"
             />
 
@@ -75,6 +77,7 @@
             android:inputType="text"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
+            android:textColor="@color/black"
             android:background="@drawable/edit_text_rounded"
             android:layout_marginBottom="15dp"/>
 
@@ -84,6 +87,7 @@
             android:layout_height="wrap_content"
             android:text="Fecha"
             android:textSize="25sp"
+            android:textColor="@color/black"
             android:layout_marginBottom="15dp"
             />
 
@@ -95,6 +99,7 @@
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
             android:inputType="date"
+            android:textColor="@color/black"
             android:background="@drawable/edit_text_rounded"
             android:layout_marginBottom="15dp"/>
 
@@ -104,6 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:text="Tipo de cultivo"
+            android:textColor="@color/black"
             android:textSize="25sp" />
 
         <Spinner
@@ -112,6 +118,7 @@
             android:layout_height="38dp"
             android:background="@drawable/edit_text_rounded"
             android:layout_marginBottom="15dp"
+            android:textColor="@color/black"
             android:entries="@array/tipocultivo" />
 
         <Button
@@ -119,7 +126,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/verdeclaro"
-            android:background="@drawable/edit_text_rounded"
             android:text="Añadir cultivo" />
 
     </LinearLayout>
