--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -25,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nombre"
+            android:textColor="@color/black"
             android:textSize="20sp" />
 
         <EditText
@@ -37,6 +38,7 @@
             android:focusable="false"
             android:paddingEnd="10dp"
             android:paddingStart="10dp"
+            android:textColor="@color/black"
             android:textSize="25sp" />
 
         <TextView
@@ -44,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Pais"
+            android:textColor="@color/black"
             android:textSize="20sp" />
 
         <EditText
@@ -56,6 +59,7 @@
             android:focusable="false"
             android:paddingEnd="10dp"
             android:paddingStart="10dp"
+            android:textColor="@color/black"
             android:textSize="25sp" />
 
         <TextView
@@ -63,6 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Genero"
+            android:textColor="@color/black"
             android:textSize="20sp" />
 
         <EditText
@@ -75,6 +80,7 @@
             android:focusable="false"
             android:paddingEnd="10dp"
             android:paddingStart="10dp"
+            android:textColor="@color/black"
             android:textSize="25sp" />
 
 
@@ -105,6 +111,7 @@
             android:layout_weight="3"
             android:gravity="center"
             android:text="Verduritas SA"
+            android:textColor="@color/black"
             android:textSize="30sp" />
 
         <ImageButton
@@ -123,6 +130,7 @@
         android:layout_height="wrap_content"
         android:text="Perfil"
         android:textSize="35dp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
