--- a/app/src/main/res/layout/post_login.xml
+++ b/app/src/main/res/layout/post_login.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/verde_tenue"
+    android:textColor="@color/black"
     tools:context=".Post_login">
 
     <LinearLayout
@@ -24,6 +25,7 @@
             android:layout_weight="3"
             android:gravity="center"
             android:text="Verduritas SA"
+            android:textColor="@color/black"
             android:textSize="30sp" />
 
         <ImageButton
@@ -52,6 +54,7 @@
         android:layout_marginTop="72dp"
         android:text="Bienvenid@"
         android:textSize="25sp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,6 +93,7 @@
                     android:layout_gravity="center"
                     android:layout_weight="3"
                     android:text="Tus cosechas"
+                    android:textColor="@color/black"
                     android:textAlignment="center" />
 
                 <ImageButton
@@ -121,7 +125,7 @@
                         android:layout_weight="2"
                         android:padding="8dp"
                         android:text="Alias"
-                        android:textColor="@android:color/white" />
+                        android:textColor="@android:color/black" />
 
                     <TextView
                         android:layout_width="0dp"
@@ -129,14 +133,14 @@
                         android:layout_weight="2"
                         android:padding="8dp"
                         android:text="fecha cosecha"
-                        android:textColor="@android:color/white" />
+                        android:textColor="@android:color/black" />
 
                     <TextView
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:padding="8dp"
-                        android:textColor="@android:color/white" />
+                        android:textColor="@android:color/black" />
                 </TableRow>
 
             </TableLayout>
