--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -40,6 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="Nombre"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <EditText
@@ -53,6 +54,7 @@
                 android:paddingEnd="16dp"
                 android:paddingTop="5dp"
                 android:paddingBottom="9dp"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <TextView
@@ -61,6 +63,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="Pais"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <EditText
@@ -74,6 +77,7 @@
                 android:paddingEnd="16dp"
                 android:paddingBottom="9dp"
                 android:paddingTop="5dp"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <TextView
@@ -82,6 +86,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="Email"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <EditText
@@ -95,6 +100,7 @@
                 android:paddingEnd="16dp"
                 android:paddingBottom="9dp"
                 android:paddingTop="5dp"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <TextView
@@ -103,6 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="Seleccione su genero"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <Spinner
@@ -115,6 +122,7 @@
                 android:paddingEnd="16dp"
                 android:paddingBottom="9dp"
                 android:paddingTop="5dp"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <TextView
@@ -123,6 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:text="Contraseña"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <EditText
@@ -137,15 +146,15 @@
                 android:paddingEnd="16dp"
                 android:paddingBottom="9dp"
                 android:paddingTop="5dp"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <Button
                 android:id="@+id/btn_registro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:backgroundTint="@color/verde"
+                android:backgroundTint="@color/verdeclaro"
                 android:text="Registrar"
-                android:background="@drawable/edit_text_rounded"
                 android:layout_marginBottom="12dp"
                 android:textColor="@color/white" />
 
@@ -155,7 +164,6 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/naranja"
                 android:text="Volver"
-                android:background="@drawable/edit_text_rounded"
                 android:textColor="@color/white" />
 
         </LinearLayout>
