--- a/app/src/main/res/layout/nuevo_cultivo.xml
+++ b/app/src/main/res/layout/nuevo_cultivo.xml
@@ -125,6 +125,7 @@
             android:id="@+id/add_cultivo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@color/white"
             android:backgroundTint="@color/verdeclaro"
             android:text="Añadir cultivo" />
 
